--- a/Suggestive/SuggestiveWeb.Tests/packages.config
+++ b/Suggestive/SuggestiveWeb.Tests/packages.config
@@ -8,4 +8,10 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="xunit" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net451" />
 </packages>
