--- a/Suggestive/SuggestiveWeb/SuggestiveWeb.csproj
+++ b/Suggestive/SuggestiveWeb/SuggestiveWeb.csproj
@@ -242,6 +242,18 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\bootswatch.css">
+      <DependentUpon>bootswatch.less</DependentUpon>
+    </Content>
+    <Content Include="Content\bootswatch.min.css">
+      <DependentUpon>bootswatch.css</DependentUpon>
+    </Content>
+    <Content Include="Content\Mixins.css">
+      <DependentUpon>Mixins.less</DependentUpon>
+    </Content>
+    <Content Include="Content\Mixins.min.css">
+      <DependentUpon>Mixins.css</DependentUpon>
+    </Content>
     <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -273,6 +285,15 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <Content Include="Content\Mixins.less" />
+    <Content Include="Content\bootswatch.less" />
+    <Content Include="Content\variables.less" />
+    <Content Include="Content\Mixins.css.map">
+      <DependentUpon>Mixins.css</DependentUpon>
+    </Content>
+    <Content Include="Content\bootswatch.css.map">
+      <DependentUpon>bootswatch.css</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Icon.png" />
     <Content Include="Scripts\bootstrap.js" />
