--- a/Suggestive/SuggestiveWeb/SuggestiveWeb.csproj
+++ b/Suggestive/SuggestiveWeb/SuggestiveWeb.csproj
@@ -238,6 +238,7 @@
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
+    <Content Include="Content\128px-McVitie%27s_chocolate_digestive_biscuit.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
