RC2 compile clean after changing to AspNetCore.Identity dependency

--- a/Suggestive/src/Suggestive.Web/project.json
+++ b/Suggestive/src/Suggestive.Web/project.json
@@ -41,7 +41,7 @@
       "version": "1.0.0-preview1-final",
       "type": "build"
     },
-    "Microsoft.AspNet.Identity": "3.0.0-rc1-final"
+    "Microsoft.AspNetCore.Identity": "1.0.0-rc2-final"
   },
 
   "tools": {
