RC2 migration complete and web site runs

--- a/Suggestive/src/Suggestive.Web/appsettings.json
+++ b/Suggestive/src/Suggestive.Web/appsettings.json
@@ -1,13 +1,11 @@
 ﻿{
-  "Data": {
-    "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-Suggestive.Web-9f5edeee-b15d-4582-bce0-251fca291549;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-Suggestive.Web-0AC82F4A-5AC1-4E23-9D65-E432E4373083;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Verbose",
+      "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
