Changed startup to get the tickets repo file from configuration

--- a/Suggestive/src/Suggestive.Web/appsettings.json
+++ b/Suggestive/src/Suggestive.Web/appsettings.json
@@ -9,5 +9,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "RequirementTicketsFile": "RequirementTickets.json"
 }
