--- a/Suggestive/src/Suggestive.Web/project.json
+++ b/Suggestive/src/Suggestive.Web/project.json
@@ -41,7 +41,8 @@
       "version": "1.0.0-preview1-final",
       "type": "build"
     },
-    "Microsoft.AspNetCore.Identity": "1.0.0-rc2-final"
+    "Microsoft.AspNetCore.Identity": "1.0.0-rc2-final",
+    "Swashbuckle": "6.0.0-beta9"
   },
 
   "tools": {
