--- a/Suggestive/src/Suggestive.Web/package.json
+++ b/Suggestive/src/Suggestive.Web/package.json
@@ -9,7 +9,8 @@
     "gulp-less": "^3.1.0",
     "gulp-uglify": "1.5.3",
     "rimraf": "2.5.2",
-    "angular": "1.5.7"
+    "angular": "1.5.7",
+    "angular-route": "1.5.7"
   },
   "dependencies": {}
 }
