--- a/Suggestive/src/Suggestive.Web/package.json
+++ b/Suggestive/src/Suggestive.Web/package.json
@@ -10,7 +10,8 @@
     "gulp-uglify": "1.5.3",
     "rimraf": "2.5.2",
     "angular": "1.5.7",
-    "angular-route": "1.5.7"
+    "angular-route": "1.5.7",
+    "gulp-ng-annotate": "*"
   },
   "dependencies": {}
 }
