--- a/Suggestive/src/Suggestive.Web/package.json
+++ b/Suggestive/src/Suggestive.Web/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "angular": "1.5.7",
+    "angular-route": "1.5.7",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
     "gulp-cssmin": "0.1.7",
+    "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
+    "gulp-ng-annotate": "*",
     "gulp-uglify": "1.5.3",
-    "rimraf": "2.5.2",
-    "angular": "1.5.7",
-    "angular-route": "1.5.7",
-    "gulp-ng-annotate": "*"
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
+    "rimraf": "2.5.2"
   },
   "dependencies": {}
 }
