--- a/Suggestive/src/Suggestive.Web/package.json
+++ b/Suggestive/src/Suggestive.Web/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "angular": "1.5.7",
-    "angular-route": "1.5.7",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.0",
     "gulp-cssmin": "0.1.7",
@@ -16,5 +14,8 @@
     "jshint-stylish": "^2.2.0",
     "rimraf": "2.5.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "angular": "1.5.7",
+    "angular-route": "1.5.7"
+  }
 }
